LU-16364 llite: Move d_u.d_alias compat define

Breaks zpl_d_drop_aliases (seen in 2.1.7)

The only user of d_alias is llite so move the
define to a header private to llite.

Test-Parameters: trivial
HPE-bug-id: LUS-11394
Signed-off-by: Shaun Tancheff <shaun.tancheff@hpe.com>
Change-Id: I44f511073f4dd17fd6dba1588e88d29cdfd3f6cb
Reviewed-on: https://review.whamcloud.com/c/fs/lustre-release/+/49308
Tested-by: jenkins <devops@whamcloud.com>
Tested-by: Maloo <maloo@whamcloud.com>
Reviewed-by: Andreas Dilger <adilger@whamcloud.com>
Reviewed-by: Petros Koutoupis <petros.koutoupis@hpe.com>
Reviewed-by: Oleg Drokin <green@whamcloud.com>